@@ -104,12 +104,12 @@ functions in the \code{car} package are
 
 \examples{
 m1 <- lm(Fertility ~ ., swiss)
-betahat.boot <- Boot(m1, R=99) # 99 bootstrap samples--too small to be useful
+betahat.boot <- Boot(m1, R=199) # 199 bootstrap samples--too small to be useful
 summary(betahat.boot)  # default summary
 confint(betahat.boot)
 hist(betahat.boot)
 # Bootstrap for the estimated residual standard deviation:
-sigmahat.boot <- Boot(m1, R=99, f=sigmaHat, labels="sigmaHat")
+sigmahat.boot <- Boot(m1, R=199, f=sigmaHat, labels="sigmaHat")
 summary(sigmahat.boot)
 confint(sigmahat.boot)
 }
